Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T6306967.out
T6306967.java:18:28: compiler.err.var.might.not.have.been.initialized: x
1 error
